test/src/e2e_vm_tests/test_programs/should_pass/test_abis/auth_testing_abi/src/main.sw
library;

abi AuthTesting {
    fn returns_gm_one() -> bool;
}
