test/src/e2e_vm_tests/test_programs/should_fail/recover_unclosed_multiline_comment/src/bar.sw
library foo;

fn foo() -> bool { 0 } // recovery witness

/*
*
